fixed hero section overflow

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,8 +1,11 @@
 .container {
     max-width: 1400px;
-    margin: 3rem auto 6rem auto;
+    margin: 3rem auto 3rem auto;
     padding: 0 1em;
   }
+
+ 
+   
 
   @media only screen and (max-width: 680px) {
     .container {
